--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "mongoose": "^8.13.2",
     "next": "15.2.2",
     "next-auth": "^5.0.0-beta.25",
+    "query-string": "^9.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
